--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -189,3 +189,35 @@ jobs:
       - uses: "actions/checkout@v4"
       - name: "TODO to Issue"
         uses: "alstr/todo-to-issue-action@v5"
+
+  deploy-to-pypi:
+    needs: [main-test]
+    permissions:
+      contents: read
+    environment: Production
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring git
+        pip install build
+        pip install setuptools
+    - name: Creating pyproject.toml
+      run: |
+        bash .tools/create_pyproject_toml
+    - name: Build package
+      run: |
+        python -m build
+        cp -r dist ..
+    - name: Publish package
+      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        packages-dir: dist/
