--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -198,6 +198,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Fetch all tags
+      run: git fetch --tags
+    - name: Check Git Tags
+      run: git tag
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
