--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -175,7 +175,7 @@ jobs:
       if: ${{ success() }}
       run: |
         echo "Creating new version"
-        git tag v2.0.${{ github.run_number }} || true
+        git tag ${{ github.run_number }} || true
         git push origin --tags || true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
