--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,23 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Run Common Setup
-      uses: ./.github/workflows/setup.yml
+
+    - name: Install dependencies
+      run: |
+        if [[ $RUNNER_OS == 'Linux' ]]; then
+          if grep -q '^ID=ubuntu' /etc/os-release; then
+            sudo apt-get update || sudo apt-get update || sudo apt-get update
+            sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux
+            curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php
+            sudo php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
+          else
+            echo "Invalid OS for pipeline. Only works with Ubuntu"
+            exit 1
+          fi
+        else
+            echo "Invalid OS detected"
+            exit 2
+        fi
     - name: Creating virtualenv
       run: |
         python3 -mvenv $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')
@@ -44,8 +59,20 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Run Common Setup
-      uses: ./.github/workflows/setup.yml
+    - name: Install dependencies
+      run: |
+        if [[ $RUNNER_OS == 'Linux' ]]; then
+          if grep -q '^ID=ubuntu' /etc/os-release; then
+            sudo apt-get update || sudo apt-get update || sudo apt-get update
+            sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux python3-venv
+          else
+            echo "Invalid OS for pipeline. Only works with Ubuntu"
+            exit 1
+          fi
+        else
+            echo "Invalid OS detected"
+            exit 2
+        fi
     - name: main test script
       run: |
         .tests/install_via_pip
@@ -58,8 +85,22 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Run Common Setup
-      uses: ./.github/workflows/setup.yml
+    - name: Install dependencies
+      run: |
+        if [[ $RUNNER_OS == 'Linux' ]]; then
+          if grep -q '^ID=ubuntu' /etc/os-release; then
+            sudo apt-get update || sudo apt-get update || sudo apt-get update
+            sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux
+            curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php
+            sudo php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
+          else
+            echo "Invalid OS for pipeline. Only works with Ubuntu"
+            exit 1
+          fi
+        else
+            echo "Invalid OS detected"
+            exit 2
+        fi
     - name: main test script
       run: |
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick
@@ -84,8 +125,23 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Run Common Setup
-      uses: ./.github/workflows/setup.yml
+
+    - name: Install dependencies
+      run: |
+        if [[ $RUNNER_OS == 'Linux' ]]; then
+          if grep -q '^ID=ubuntu' /etc/os-release; then
+            sudo apt-get update || sudo apt-get update || sudo apt-get update
+            sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux
+            curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php
+            sudo php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
+          else
+            echo "Invalid OS for pipeline. Only works with Ubuntu"
+            exit 1
+          fi
+        else
+            echo "Invalid OS detected"
+            exit 2
+        fi
     - name: Creating virtualenv
       run: |
         python3 -mvenv $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')
@@ -152,11 +208,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
-    - name: Run Common Setup
-      uses: ./.github/workflows/setup.yml
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring git
         pip install build
         pip install setuptools
     - name: Creating pyproject.toml
