--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -200,10 +200,6 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Fetch all tags
-      run: git fetch --tags
-    - name: Check Git Tags
-      run: git tag
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
@@ -216,7 +212,7 @@ jobs:
         pip install setuptools
     - name: Creating pyproject.toml
       run: |
-        bash .tools/create_pyproject_toml
+        bash .tools/create_pyproject_toml ${{ github.run_number }}
     - name: Build package
       run: |
         python -m build
