install via pip not forced anymore

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,7 +106,7 @@ jobs:
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick
 
   main-test:
-    needs: [Linter, todo-to-issue, docker-test, install-via-pip]
+    needs: [Linter, todo-to-issue, docker-test]
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
