--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-24.04, ubuntu-22.04, ubuntu-24.04-arm, ubuntu-22.04-arm] #, macos-14]
+        os: [ubuntu-24.04, ubuntu-22.04] #, macos-14]
 
     steps:
     - name: Log Versions
