removed RANDOMFOREST with constraint at first

--- a/.tests/pylint.rc
+++ b/.tests/pylint.rc
@@ -459,6 +459,7 @@ disable=raw-checker-failed,
 	consider-using-enumerate,
 	consider-using-f-string,
 	invalid-name,
+	too-many-instance-attributes,
 	redefined-builtin,
 	line-too-long,
 	c-extension-no-member,
