--- a/.tools/pylint.rc
+++ b/.tools/pylint.rc
@@ -459,6 +459,7 @@ disable=raw-checker-failed,
 	c-extension-no-member,
         locally-disabled,
         file-ignored,
+	too-many-instance-attributes,
 	import-outside-toplevel,
 	too-many-function-args,
 	eval-used,
