--- a/.tools/pylint.rc
+++ b/.tools/pylint.rc
@@ -460,6 +460,7 @@ disable=raw-checker-failed,
         locally-disabled,
         file-ignored,
 	too-many-instance-attributes,
+	too-many-return-statements,
 	import-outside-toplevel,
 	too-many-function-args,
 	eval-used,
