--- a/.tests/mkdocs.yml
+++ b/.tests/mkdocs.yml
@@ -4,6 +4,7 @@ theme:
   name: "mkdocs"
 markdown_extensions:
   - codehilite
+  - pymdownx.superfences  # Add this line
   - toc:
       permalink: true
 plugins:
