--- a/.gui/Dockerfile
+++ b/.gui/Dockerfile
@@ -16,10 +16,16 @@ RUN echo '<Directory /var/www/html>\n\
     && a2enconf custom
 
 WORKDIR /var/www/html
-RUN chown -R www-data:www-data /var/www/html
 
-RUN chown -R www-data:www-data /var/www/html && \
-    find /var/www/html -type d -exec chmod 755 {} \; && \
+# Wichtig: COPY erst jetzt!
+COPY --chown=www-data:www-data . /var/www/html/
+
+# Alternativ, falls --chown nicht geht:
+# COPY . /var/www/html/
+# RUN chown -R www-data:www-data /var/www/html
+
+# Dateirechte
+RUN find /var/www/html -type d -exec chmod 755 {} \; && \
     find /var/www/html -type f -exec chmod 644 {} \;
 
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
