--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,12 +51,14 @@ jobs:
       run: |
         ./.tests/linter
   install-via-pip:
+    needs: [Linter, todo-to-issue]
     runs-on: ubuntu-24.04
     environment: Production
     strategy:
       fail-fast: true
       matrix:
         os: [ubuntu-24.04, ubuntu-22.04] #, macos-14]
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -78,6 +80,7 @@ jobs:
       run: |
         .tests/install_via_pip
   docker-test:
+    needs: [Linter, todo-to-issue]
     runs-on: ubuntu-24.04
     environment: Production
     strategy:
@@ -108,6 +111,7 @@ jobs:
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick
 
   main-test:
+    needs: [Linter, todo-to-issue, docker-test, install-via-pip]
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
@@ -192,7 +196,7 @@ jobs:
         uses: "alstr/todo-to-issue-action@v5"
 
   deploy-to-pypi:
-    needs: [todo-to-issue, docker-test, install-via-pip, Linter, main-test]
+    needs: [main-test]
     permissions:
       contents: read
     environment: Production
