--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,7 +117,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-24.04, ubuntu-22.04, windows-latest] #, macos-14]
+        os: [ubuntu-24.04, ubuntu-22.04] #, macos-14]
 
     steps:
     - name: Checkout code
