--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,17 +143,47 @@ jobs:
         curl -sS https://getcomposer.org/installer -o $env:TEMP\composer-setup.php
         php $env:TEMP\composer-setup.php --install-dir=C:\tools --filename=composer
 
-    - name: Creating virtualenv
+    - name: Creating virtualenv (Linux)
+      if: runner.os == 'Linux'
       run: |
-        python3 -mvenv $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')
-        source $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')/bin/activate
+        VENV_PATH="$HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')"
+        python3 -m venv "$VENV_PATH"
+        source "$VENV_PATH/bin/activate"
 
-        if command -v brew; then
+        if command -v brew >/dev/null 2>&1; then
           pip install psycopg2-binary
         fi
-    - name: Installing stuff...
+
+    - name: Creating virtualenv (Windows)
+      if: runner.os == 'Windows'
+      shell: pwsh
       run: |
-        source $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')/bin/activate
+        $pyver = python --version | ForEach-Object { $_ -replace 'Python ', '' }
+        $venvPath = "$env:USERPROFILE\.omniax_$env:PROCESSOR_ARCHITECTURE`_Python_$pyver"
+        python -m venv $venvPath
+        & "$venvPath\Scripts\Activate.ps1"
+
+        if (Get-Command brew -ErrorAction SilentlyContinue) {
+          pip install psycopg2-binary
+        }
+
+    - name: Installing stuff (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        VENV_PATH="$HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')"
+        source "$VENV_PATH/bin/activate"
+        pip install --no-cache-dir --upgrade pip
+        pip install --no-cache-dir setuptools
+        pip install --no-cache-dir pip wheel
+        pip install --no-cache-dir multidict
+
+    - name: Installing stuff (Windows)
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: |
+        $pyver = python --version | ForEach-Object { $_ -replace 'Python ', '' }
+        $venvPath = "$env:USERPROFILE\.omniax_$env:PROCESSOR_ARCHITECTURE`_Python_$pyver"
+        & "$venvPath\Scripts\Activate.ps1"
         pip install --no-cache-dir --upgrade pip
         pip install --no-cache-dir setuptools
         pip install --no-cache-dir pip wheel
