--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -177,6 +177,13 @@ jobs:
         pip install --no-cache-dir pip wheel
         pip install --no-cache-dir multidict
 
+    - name: Install Linux-like tools (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        choco install wget -y
+        choco install util-linux -y   # enthält `uuidgen`
+        choco install git -y          # bringt optional Bash und Tools mit
+
     - name: Installing stuff (Windows)
       if: runner.os == 'Windows'
       shell: pwsh
