--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -197,8 +197,10 @@ jobs:
         pip install --no-cache-dir multidict
 
     - name: main test script
+      shell: bash
       run: |
         ./.tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --no_plots
+
     - name: plot tests
       run: |
         bash ./.tests/plots
