re-added order, disabled windows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,13 +111,13 @@ jobs:
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick
 
   main-test:
-    #needs: [Linter, todo-to-issue, docker-test, install-via-pip]
+    needs: [Linter, todo-to-issue, docker-test, install-via-pip]
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-24.04, ubuntu-22.04, windows-latest] #, macos-14]
+        os: [ubuntu-24.04, ubuntu-22.04] #, windows-latest] #, macos-14]
 
     steps:
     - name: Checkout code
