--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-24.04, ubuntu-22.04, windows-latest] #, macos-14]
+        os: [ubuntu-24.04, ubuntu-22.04]
 
     steps:
     - name: Checkout code
@@ -86,7 +86,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-24.04, ubuntu-22.04, windows-latest] #, macos-14]
+        os: [ubuntu-24.04, ubuntu-22.04]
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -117,7 +117,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-24.04, ubuntu-22.04] #, windows-latest] #, macos-14]
+        os: [ubuntu-24.04, ubuntu-22.04]
 
     steps:
     - name: Checkout code
@@ -136,13 +136,6 @@ jobs:
           exit 1
         fi
 
-    - name: Install dependencies (Windows)
-      if: runner.os == 'Windows'
-      run: |
-        choco install php curl unzip -y
-        curl -sS https://getcomposer.org/installer -o $env:TEMP\composer-setup.php
-        php $env:TEMP\composer-setup.php --install-dir=C:\tools --filename=composer
-
     - name: Creating virtualenv (Linux)
       if: runner.os == 'Linux'
       run: |
@@ -154,45 +147,11 @@ jobs:
           pip install psycopg2-binary
         fi
 
-    - name: Creating virtualenv (Windows)
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        $pyver = python --version | ForEach-Object { $_ -replace 'Python ', '' }
-        $venvPath = "$env:USERPROFILE\.omniax_$env:PROCESSOR_ARCHITECTURE`_Python_$pyver"
-        python -m venv $venvPath
-        & "$venvPath\Scripts\Activate.ps1"
-
-        if (Get-Command brew -ErrorAction SilentlyContinue) {
-          pip install psycopg2-binary
-        }
-
     - name: Installing stuff (Linux)
       if: runner.os == 'Linux'
       run: |
         VENV_PATH="$HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')"
         source "$VENV_PATH/bin/activate"
-        pip install --no-cache-dir --upgrade pip
-        pip install --no-cache-dir setuptools
-        pip install --no-cache-dir pip wheel
-        pip install --no-cache-dir multidict
-
-    - name: Install Linux-like tools (Windows)
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        choco install -y wget
-        choco install -y util-linux        # enthält uuidgen
-        choco install -y git               # bringt bash + optional resize
-        choco install -y xterm             # enthält resize
-
-    - name: Installing stuff (Windows)
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        $pyver = python --version | ForEach-Object { $_ -replace 'Python ', '' }
-        $venvPath = "$env:USERPROFILE\.omniax_$env:PROCESSOR_ARCHITECTURE`_Python_$pyver"
-        & "$venvPath\Scripts\Activate.ps1"
         pip install --no-cache-dir --upgrade pip
         pip install --no-cache-dir setuptools
         pip install --no-cache-dir pip wheel
