--- a/.gui/Dockerfile
+++ b/.gui/Dockerfile
@@ -3,6 +3,7 @@ FROM php:8.2-apache
 RUN apt-get update && apt-get install -y \
     libzip-dev \
     zip \
+    libsixel-bin \
     unzip \
     && docker-php-ext-install zip
 
