--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,7 +123,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install dependencies (Ubuntu)
+    - name: Install dependencies
       if: runner.os == 'Linux'
       run: |
         if grep -q '^ID=ubuntu' /etc/os-release; then
@@ -136,7 +136,7 @@ jobs:
           exit 1
         fi
 
-    - name: Creating virtualenv (Linux)
+    - name: Creating virtualenv
       if: runner.os == 'Linux'
       run: |
         VENV_PATH="$HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')"
@@ -147,7 +147,7 @@ jobs:
           pip install psycopg2-binary
         fi
 
-    - name: Installing stuff (Linux)
+    - name: Installing stuff
       if: runner.os == 'Linux'
       run: |
         VENV_PATH="$HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')"
