dont allow shares

--- a/.gui/.htaccess
+++ b/.gui/.htaccess
@@ -8,3 +8,5 @@ RewriteRule ^([^/.]+)$ $1.php [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule .* 404.php [L]
+
+RewriteRule ^shares(/.*)?$ - [F,L]
