--- a/.tools/pylint.rc
+++ b/.tools/pylint.rc
@@ -430,6 +430,7 @@ disable=raw-checker-failed,
 	missing-function-docstring,
 	missing-class-docstring,
 	unidiomatic-typecheck,
+	eval-used,
 	possibly-used-before-assignment,
 	global-statement,
 	too-many-lines,
