eval-used ignore

--- a/.tests/pylint.rc
+++ b/.tests/pylint.rc
@@ -429,6 +429,7 @@ disable=raw-checker-failed,
 	protected-access,
 	too-many-positional-arguments,
 	missing-function-docstring,
+	eval-used,
 	missing-class-docstring,
 	unidiomatic-typecheck,
 	possibly-used-before-assignment,
