--- a/.tests/pylint.rc
+++ b/.tests/pylint.rc
@@ -455,6 +455,8 @@ disable=raw-checker-failed,
 	consider-using-get,
 	use-maxsplit-arg,
 	unnecessary-comprehension,
+	import-error,
+	no-member,
 	consider-using-with,
 	arguments-renamed,
 	consider-iterating-dictionary,
