--- a/.tests/pylint.rc
+++ b/.tests/pylint.rc
@@ -473,6 +473,7 @@ disable=raw-checker-failed,
 	import-outside-toplevel,
 	too-many-function-args,
         suppressed-message,
+	no-name-in-module,
         useless-suppression,
         deprecated-pragma,
         use-symbolic-message-instead,
