--- a/.tests/pylint.rc
+++ b/.tests/pylint.rc
@@ -474,6 +474,7 @@ disable=raw-checker-failed,
 	too-many-function-args,
         suppressed-message,
 	no-name-in-module,
+	redefined-outer-name,
         useless-suppression,
         deprecated-pragma,
         use-symbolic-message-instead,
