--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,35 +50,35 @@ jobs:
     - name: Run linter
       run: |
         ./.tests/linter
-  #install-via-pip:
-  #  needs: [Linter, todo-to-issue]
-  #  runs-on: ubuntu-24.04
-  #  environment: Production
-  #  strategy:
-  #    fail-fast: true
-  #    matrix:
-  #      os: [ubuntu-24.04, ubuntu-22.04]
+  install-via-pip:
+    needs: [Linter, todo-to-issue]
+    runs-on: ubuntu-24.04
+    environment: Production
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-24.04, ubuntu-22.04]
 
-  #  steps:
-  #  - name: Checkout code
-  #    uses: actions/checkout@v4
-  #  - name: Install dependencies
-  #    run: |
-  #      if [[ $RUNNER_OS == 'Linux' ]]; then
-  #        if grep -q '^ID=ubuntu' /etc/os-release; then
-  #          sudo apt-get update || sudo apt-get update || sudo apt-get update
-  #          sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux python3-venv
-  #        else
-  #          echo "Invalid OS for pipeline. Only works with Ubuntu"
-  #          exit 1
-  #        fi
-  #      else
-  #          echo "Invalid OS detected"
-  #          exit 2
-  #      fi
-  #  - name: main test script
-  #    run: |
-  #      .tests/install_via_pip
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Install dependencies
+      run: |
+        if [[ $RUNNER_OS == 'Linux' ]]; then
+          if grep -q '^ID=ubuntu' /etc/os-release; then
+            sudo apt-get update || sudo apt-get update || sudo apt-get update
+            sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux python3-venv
+          else
+            echo "Invalid OS for pipeline. Only works with Ubuntu"
+            exit 1
+          fi
+        else
+            echo "Invalid OS detected"
+            exit 2
+        fi
+    - name: main test script
+      run: |
+        .tests/install_via_pip
   docker-test:
     needs: [Linter, todo-to-issue]
     runs-on: ubuntu-24.04
@@ -111,8 +111,7 @@ jobs:
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick
 
   main-test:
-    #needs: [Linter, todo-to-issue, docker-test, install-via-pip]
-    needs: [Linter, todo-to-issue, docker-test]
+    needs: [Linter, todo-to-issue, docker-test, install-via-pip]
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
