less crap from linter

--- a/.tests/pylint.rc
+++ b/.tests/pylint.rc
@@ -431,6 +431,10 @@ disable=raw-checker-failed,
 	missing-function-docstring,
 	eval-used,
 	missing-class-docstring,
+	import-error,
+	no-name-in-module,
+	unexpected-keyword-arg,
+	no-value-for-parameter,
 	unidiomatic-typecheck,
 	possibly-used-before-assignment,
 	global-statement,
