--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -159,7 +159,17 @@ jobs:
     - name: main test script
       shell: bash
       run: |
-        ./.tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --no_plots
+        ./.tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --no_plots --run_with_coverage
+
+    - name: Upload coverage artifact
+      if: ${{ env.RUN_WITH_COVERAGE == '1' }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-data
+        path: |
+          .coverage*
+          coverage*.xml
+          htmlcov
 
     - name: plot tests
       run: |
