--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,14 @@ jobs:
     runs-on: "ubuntu-latest"
     environment: Production
 
+    - name: Cache Python packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        restore-keys: |
+          pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt') }}-
+
     permissions:
       contents: write
 
