--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,17 +23,17 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt') . hashFiles('test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        key: pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
         restore-keys: |
-          pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt') . hashFiles('test_requirements.txt') }}-
+          pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-
 
     - name: Cache virtualenv
       uses: actions/cache@v3
       with:
         path: $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')
-        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt') . hashFiles('test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
         restore-keys: |
-          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt') . hashFiles('test_requirements.txt') }}-
+          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-
 
     - name: Checkout code
       uses: actions/checkout@v4
@@ -142,17 +142,17 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt') . hashFiles('test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        key: pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
         restore-keys: |
-          pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt') . hashFiles('test_requirements.txt') }}-
+          pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-
 
     - name: Cache virtualenv
       uses: actions/cache@v3
       with:
         path: $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')
-        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt') . hashFiles('test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
         restore-keys: |
-          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt') . hashFiles('test_requirements.txt') }}-
+          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-
 
     - name: Checkout code
       uses: actions/checkout@v4
