--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - '**'
 
 jobs:
-  Linter:
+  SuperfastFailingTests:
     strategy:
       fail-fast: true
     runs-on: "ubuntu-latest"
@@ -48,20 +48,64 @@ jobs:
 
     - name: Install dependencies
       run: |
-        if [[ $RUNNER_OS == 'Linux' ]]; then
-          if grep -q '^ID=ubuntu' /etc/os-release; then
-            sudo apt-get update || sudo apt-get update || sudo apt-get update
-            sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux
-            curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php
-            sudo php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
-          else
-            echo "Invalid OS for pipeline. Only works with Ubuntu"
-            exit 1
-          fi
-        else
-            echo "Invalid OS detected"
-            exit 2
+        .tools/ci_dependency
+
+    - name: Creating virtualenv
+      run: |
+        python3 -mvenv $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')
+        source $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')/bin/activate
+
+        if command -v brew; then
+          pip install psycopg2-binary
         fi
+
+    - name: Run linter
+      run: |
+        .tests/annoying_tiny_but_important_tests
+
+  Linter:
+    needs: [SuperfastFailingTests]
+
+    strategy:
+      fail-fast: true
+    runs-on: "ubuntu-latest"
+    environment: Production
+
+    permissions:
+      contents: write
+
+    steps:
+    - name: Cache Python packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        restore-keys: |
+          pip-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-
+
+    - name: Cache virtualenv
+      uses: actions/cache@v3
+      with:
+        path: $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')
+        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        restore-keys: |
+          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt,test_requirements.txt') }}-
+
+    - name: Cache apt packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/apt
+        key: apt-${{ runner.os }}-${{ hashFiles('apt-dependencies.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        restore-keys: |
+          apt-${{ runner.os }}-
+
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: |
+        .tools/ci_dependency
+
     - name: Creating virtualenv
       run: |
         python3 -mvenv $HOME/.omniax_$(uname -m)_Python_$(python3 --version | sed -e 's#Python ##')
@@ -124,20 +168,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        if [[ $RUNNER_OS == 'Linux' ]]; then
-          if grep -q '^ID=ubuntu' /etc/os-release; then
-            sudo apt-get update || sudo apt-get update || sudo apt-get update
-            sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux
-            curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php
-            sudo php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
-          else
-            echo "Invalid OS for pipeline. Only works with Ubuntu"
-            exit 1
-          fi
-        else
-            echo "Invalid OS detected"
-            exit 2
-        fi
+        .tools/ci_dependency
     - name: main test script
       run: |
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick
@@ -183,17 +214,8 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      if: runner.os == 'Linux'
       run: |
-        if grep -q '^ID=ubuntu' /etc/os-release; then
-          sudo apt-get update || sudo apt-get update || sudo apt-get update
-          sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring bc util-linux
-          curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php
-          sudo php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
-        else
-          echo "Invalid OS for pipeline. Only works with Ubuntu"
-          exit 1
-        fi
+        .tools/ci_dependency
 
     - name: Creating virtualenv
       if: runner.os == 'Linux'
