cache apt properly

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,9 @@ jobs:
     - name: Cache apt packages
       uses: actions/cache@v3
       with:
-        path: ~/.cache/apt
+        path: |
+          /var/cache/apt/archives
+          /var/lib/apt/lists
         key: apt-${{ runner.os }}-${{ hashFiles('apt-dependencies.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
         restore-keys: |
           apt-${{ runner.os }}-
@@ -94,7 +96,9 @@ jobs:
     - name: Cache apt packages
       uses: actions/cache@v3
       with:
-        path: ~/.cache/apt
+        path: |
+          /var/cache/apt/archives
+          /var/lib/apt/lists
         key: apt-${{ runner.os }}-${{ hashFiles('apt-dependencies.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
         restore-keys: |
           apt-${{ runner.os }}-
@@ -161,7 +165,9 @@ jobs:
     - name: Cache apt packages
       uses: actions/cache@v3
       with:
-        path: ~/.cache/apt
+        path: |
+          /var/cache/apt/archives
+          /var/lib/apt/lists
         key: apt-${{ runner.os }}-${{ hashFiles('apt-dependencies.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
         restore-keys: |
           apt-${{ runner.os }}-
@@ -205,7 +211,9 @@ jobs:
     - name: Cache apt packages
       uses: actions/cache@v3
       with:
-        path: ~/.cache/apt
+        path: |
+          /var/cache/apt/archives
+          /var/lib/apt/lists
         key: apt-${{ runner.os }}-${{ hashFiles('apt-dependencies.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
         restore-keys: |
           apt-${{ runner.os }}-
