outsourced cache-venv

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ on:
 
 jobs:
   SuperfastFailingTests:
+    uses: ./.github/workflows/cache-venv.yml
+    with:
+      requirements: "requirements.txt,test_requirements.txt"
+
     strategy:
       fail-fast: true
 
@@ -22,24 +26,6 @@ jobs:
     steps:
     - name: Ensure venv path exists
       run: mkdir -p ~/.omniax_venvs/Python_${{ runner.python_version }}/${{ runner.arch }}
-
-    - name: Extract date
-      id: date
-      run: echo "today=$(date -u +%Y%m%d)" >> $GITHUB_OUTPUT
-
-    - name: Cache omniax_venvs
-      uses: actions/cache@v3
-      with:
-        path: ~/.omniax_venvs
-        key: venv-${{ steps.date.outputs.today }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}
-        restore-keys: |
-          venv-${{ steps.date.outputs.today }}-
-          venv-
-
-    - name: Make apt cache readable
-      run: |
-        sudo chmod -R a+r /var/cache/apt/archives /var/lib/apt/lists
-        sudo chmod -R a+X /var/cache/apt/archives /var/lib/apt/lists
 
     - name: Checkout code
       uses: actions/checkout@v4
@@ -64,6 +50,10 @@ jobs:
   Linter:
     needs: [SuperfastFailingTests]
 
+    uses: ./.github/workflows/cache-venv.yml
+    with:
+      requirements: "requirements.txt,test_requirements.txt"
+
     strategy:
       fail-fast: true
     runs-on: "ubuntu-latest"
@@ -73,14 +63,6 @@ jobs:
       contents: write
 
     steps:
-    - name: Cache virtualenv
-      uses: actions/cache@v3
-      with:
-        path: ~/.omniax_venvs/Python_${{ runner.python_version }}/${{ runner.arch }}
-        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
-        restore-keys: |
-          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}-
-
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -149,6 +131,11 @@ jobs:
 
   main-test:
     needs: [Linter, todo-to-issue, docker-test] #, install-via-pip]
+
+    uses: ./.github/workflows/cache-venv.yml
+    with:
+      requirements: "requirements.txt,test_requirements.txt"
+
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
@@ -160,14 +147,6 @@ jobs:
       contents: write
 
     steps:
-    - name: Cache virtualenv
-      uses: actions/cache@v3
-      with:
-        path: ~/.omniax_venvs/Python_${{ runner.python_version }}/${{ runner.arch }}
-        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
-        restore-keys: |
-          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}-
-
     - name: Checkout code
       uses: actions/checkout@v4
 
