--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,13 +73,14 @@ jobs:
       contents: write
 
     steps:
-    - name: Cache virtualenv
+    - name: Cache omniax_venvs
       uses: actions/cache@v3
       with:
-        path: ~/.omniax_venvs/Python_${{ runner.python_version }}/${{ runner.arch }}
-        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        path: ~/.omniax_venvs
+        key: venv-${{ steps.date.outputs.today }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}
         restore-keys: |
-          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}-
+          venv-${{ steps.date.outputs.today }}-
+          venv-
 
     - name: Checkout code
       uses: actions/checkout@v4
@@ -160,13 +161,15 @@ jobs:
       contents: write
 
     steps:
-    - name: Cache virtualenv
+
+    - name: Cache omniax_venvs
       uses: actions/cache@v3
       with:
-        path: ~/.omniax_venvs/Python_${{ runner.python_version }}/${{ runner.arch }}
-        key: venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}-${{ format('yyyyMMdd', github.event.head_commit.timestamp) }}
+        path: ~/.omniax_venvs
+        key: venv-${{ steps.date.outputs.today }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}
         restore-keys: |
-          venv-${{ runner.python_version }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}-
+          venv-${{ steps.date.outputs.today }}-
+          venv-
 
     - name: Checkout code
       uses: actions/checkout@v4
