--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,9 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        tags: true
 
     - name: Install dependencies
       run: |
@@ -84,6 +87,9 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        tags: true
 
     - name: Install dependencies
       run: |
@@ -140,6 +146,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        tags: true
 
     - name: Install dependencies
       run: |
@@ -173,6 +182,9 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        tags: true
 
     - name: Install dependencies
       run: |
