--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -235,7 +235,7 @@ jobs:
 
     - name: plot tests
       run: |
-        bash ./.tests/plots
+        bash ./.tests/plots --check_only_changed_since_last_success
     - uses: release-drafter/release-drafter@v5
       with:
           config-name: release-drafter.yml
