moved stuff around

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,7 +152,7 @@ jobs:
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick
 
   main-test:
-    needs: [Linter, todo-to-issue, docker-test] #, install-via-pip]
+    needs: [Linter, todo-to-issue] #, install-via-pip]
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
@@ -250,7 +250,7 @@ jobs:
         uses: "alstr/todo-to-issue-action@v5"
 
   deploy-to-pypi:
-    needs: [main-test]
+    needs: [docker-test, main-test]
     permissions:
       contents: read
     environment: Production
