--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,7 +152,7 @@ jobs:
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick
 
   main-test:
-    needs: [smoke-tests, todo-to-issue] #, install-via-pip]
+    #needs: [smoke-tests, todo-to-issue] #, install-via-pip]
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
