--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,7 +103,7 @@ jobs:
       run: |
         ./.tests/linter --check_only_changed_since_last_success
   #install-via-pip:
-  #  needs: [Linter, todo-to-issue]
+  #  needs: [Linter]
   #  runs-on: ubuntu-24.04
   #  environment: Production
   #  strategy:
@@ -131,7 +131,7 @@ jobs:
   #    run: |
   #      .tests/install_via_pip
   docker-test:
-    needs: [todo-to-issue, smoke-tests]
+    needs: [smoke-tests]
     runs-on: ubuntu-24.04
     environment: Production
     strategy:
@@ -152,7 +152,7 @@ jobs:
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick --run_with_coverage
 
   main-test:
-    needs: [smoke-tests, todo-to-issue] #, install-via-pip]
+    needs: [smoke-tests] #, install-via-pip]
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
