todo to issues need smoke tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -240,6 +240,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   todo-to-issue:
+    needs: [smoke-tests]
     strategy:
       fail-fast: true
     runs-on: "ubuntu-latest"
