install via pip

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -241,7 +241,7 @@ jobs:
         uses: "alstr/todo-to-issue-action@v5"
 
   deploy-to-pypi:
-    needs: [linter, docker-test, main-test]
+    needs: [linter, docker-test, main-test, install-via-pip]
     permissions:
       contents: read
     environment: Production
